infra/car-care-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-care-deploy
spec:
  selector:
    matchLabels:
      app: car-care
  replicas: 1
  template:
    metadata:
      labels:
        app: car-care
    spec:
      containers:
        - name: car-care
          image: jabirhussainat/car-care-web:car-care-web  # Updated image name with tag
---
apiVersion: v1
kind: Service
metadata:
  name: car-care
spec:
  type: NodePort
  selector:
    app: car-care
  ports:
    - name: my-app
      port: 3002
      targetPort: 3002
