infra/mongo-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
spec:
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
