infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-care-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: shop.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: car-care
                port:
                  number: 3002
